styles/styles.css
/* ... */
.social-item-link:focus {
  outline: 5px solid #AF4FFF;
}

.social-item-link:active .social-item-icon {
  opacity: .3;
}

.social-item-icon {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: auto;
  fill: #444;
}

.social-list-item {
  display: flex;
  align-items: center;
  justify-content: center;
}

.footer-phone {
  font-size: 16px;
  line-height: 30px;
  text-align: right;
}

.breadcrumbs {
  display: flex;
  flex-wrap: wrap;
  padding: 0;
  margin: 0;
  list-style-type: none;
  column-gap: 10px;
}

.breadcrumbs-item {
  position: relative;
}

.breadcrumbs-item + .breadcrumbs-item::before {
  position: absolute;
  content: "";
  display: block;
  width: 4px;
  height: 7px;
  background-image: url("../img/right-arrow-small.svg");
  left: -6px;
  top: 50%;
  margin-top: -4px;
}

.breadcrumbs-item-link {
  font-size: 16px;
  line-height: 19px;
  color: black;
  text-decoration: none;
  opacity: 0.6;
  padding-top: 5px;
  padding-bottom: 6px;
  padding-left: 13px;
  padding-right: 12px;
}

.main-header-inner-container {
  margin-left: 60px;
  margin-bottom: 50px;
}

.catalog-right-column {
  grid-column: 3/4;
  grid-row: 1/3;
}

.catalog-products {
  display: grid;
  grid-template-columns: 1fr 330px 830px 1fr;
  grid-template-rows: auto 1fr;
}

.product-list {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 40px;
  padding: 0;
  margin: 0;
  margin-bottom: 44px;
}

.product-card-pagination {
  display: flex;
  grid-column: 2/3;
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.product-card {
  width: 360px;
  display: grid;
  grid-template-columns: min-content auto;
  /*todo: if fixed 380px height is not set then
   'product-card-image-link' link content is
   higher than image height. Why?*/
  grid-template-rows: 380px min-content;
  row-gap: 32px;
}

.catalog-container {
  grid-column: 3/4;
  grid-row: 2/3;
  width: 760px;
  padding-top: 70px;
  margin-left: 70px;
  background-color: #FFFFFF;
}

.product-card-features {
  display: grid;
  column-gap: 20px;
  row-gap: 5px;
  grid-column: 1/3;
  grid-row: 5/6;
  justify-self: start;
  margin-left: 0;
  margin-right: 0;
  margin-top: 70px;
  margin-bottom: 40px;
  padding: 0;
}

.catalog-left-top-column {
  grid-column: 1/3;
  grid-row: 1/2;
  background-color: #DCDCDC;
}

.catalog-left-bottom-column {
  background-color: #EBEBEB;
  grid-column: 1/2;
  grid-row: 2/-1;
}

.catalog-right-top-column {
  grid-column: 4/-1;
  grid-row: 1/2;
  background-color: #EBEBEB;
}

.catalog-filter {
  background: #EBEBEB;
  color: black;
  padding-left: 60px;
  grid-column: 2/3;
  grid-row: 2/3;
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}

.catalog-form-title {
  grid-column: 2/3;
  grid-row: 1/2;
  font-size: 16px;
  line-height: 19px;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  margin: 0;
  padding-left: 60px;
  padding-top: 25px;
  padding-bottom: 25px;
}

.catalog-sorting-title {
  font-size: 16px;
  line-height: 19px;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  margin: 0;
  margin-right: 52px;
  padding-top: 25px;
  padding-bottom: 25px;
}

.sorting-header-container {
  grid-column: 3/4;
  grid-row: 1/2;
  display: flex;
  align-items: center;
  background-color: #EBEBEB;
}

.catalog-sorting-type {
  display: flex;
  margin-left: 72px;
  margin-right: auto;
  background-color: #EBEBEB;
}

.button-sort {
  position: relative;
  width: 30px;
  height: 30px;
}

.sort-up {
  background-image: url("../img/sort-down.svg");
  transform: rotate(180deg);
}

.sort-down {
  background-image: url("../img/sort-down.svg");
}

.sort-icon {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-repeat: no-repeat;
  background-position: center;
  opacity: .2;
}

.button-sort.button-active .sort-icon {
  opacity: 1;
}

.button-sort:hover .sort-icon {
  opacity: .5;
}

.button-sort:active .sort-icon {
  opacity: 1;
}

.button-sort:focus {
  outline: 5px solid #AF4FFF;
}

.select-control {
  font-family: "Rubik", sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 19px;
  background-color: #EBEBEB;
  border: none;
}

.catalog-filter-group-title {
  font-weight: bold;
  font-size: 18px;
  line-height: 20px;
  letter-spacing: -0.02em;
}

.catalog-filter-label {
  font-size: 15px;
  line-height: 18px;
  text-align: center;
  opacity: 0.3;
}

.catalog-filter-button {
  width: 200px;
  margin-top: 50px;
  padding-top: 14px;
  padding-bottom: 16px;
  padding-left: 0;
  border: none;
}

.control-label {
  font-size: 16px;
  line-height: 19px;
}

.product-card-image-link {
  position: relative;
  margin: 0;
  padding: 0;
  border: 0;
  grid-column: 1/-1;
}

.product-card.product-badge-new .product-card-image-link::after {
  content: "";
  position: absolute;
  width: 60px;
  height: 60px;
  right: 27px;
  top: 27px;
  background-image: url("../img/badge_new.svg");
}

.product-card-image {
  object-fit: contain;
}

.product-card-title-link {
  text-decoration: none;
  color: black;
}

.product-card-title {
  font-family: "Rubik", sans-serif;
  font-weight: 800;
  font-style: normal;
  font-size: 18px;
  line-height: 24px;
  letter-spacing: -0.02em;
  color: black;
  display: inline-block;
  width: 280px;
  background-color: inherit;
}

.product-card-price {
  line-height: 21px;
  text-align: right;
  display: inline-block;
  margin-left: auto;
  align-self: center;
}

.catalog-pagination {
  display: flex;
  align-items: baseline;
  background-color: #EBEBEB;
  padding: 0;
  margin: 0;
  margin-bottom: 77px;
  list-style-type: none;
}

.pagination-link {
  display: inline-block;
  text-decoration: none;
  color: inherit;
  font-size: 16px;
  line-height: 19px;
}

.pagination-text {
  display: inline-block;
}

.pagination-number {
  padding-left: 15px;
  padding-right: 15px;
  padding-top: 9px;
  padding-bottom: 9px;
}

.pagination-link-next,
.pagination-link-prev {
  padding: 26px;
}
/* ... */

